src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
    .text-shadow-none {
        text-shadow: none;
    }
}

:root {
    --squeak-primary-color: 0, 0, 0;
    --squeak-default-avatar-fill: 255, 255, 255;
    --squeak-button-color: 245, 78, 0;
    .dark {
        --squeak-primary-color: 255, 255, 255;
        --squeak-default-avatar-fill: 0, 0, 0;
    }
}

/* links and text */

*,
a {
    @apply box-border;
}

main a,
.article-content a:not(.cta) {
    @apply text-red hover:text-red font-semibold;
}

p {
    font-variant-numeric: proportional-nums;
}

blockquote {
    letter-spacing: -0.015em;
}

/* headers */

h1,
h2,
h3,
h4,
h5,
h6 {
    color: inherit;
    font-variation-settings: 'wght' 800;
    letter-spacing: -0.02em;
    margin-bottom: 1rem;

    a {
        font-variation-settings: 'wght' 800;
    }

    code {
        font-variation-settings: 'wght' 800;
    }
}

h1 {
    @apply text-5xl font-bold leading-normal;
    letter-spacing: -0.03em;
}

h2 {
    @apply text-3xl font-bold leading-normal;
    letter-spacing: -0.03em;

    code {
        @apply !font-bold !text-3xl;
    }
}

h3 {
    @apply text-2xl leading-normal;

    code {
        @apply !font-bold !text-2xl;
    }
}

h4 {
    @apply text-xl leading-normal mb-3;

    code {
        @apply !font-bold !text-xl;
    }
}

/* Content pages (Handbook,  Docs, Blog, Customers, FAQ) */
.article-content {
    h2,
    h3,
    h4,
    h5,
    h6 {
        @apply mt-8;
        letter-spacing: -0.015em;
    }

    p,
    li {
        @apply text-base leading-7;

        li {
            @apply text-base;
        }

        img.blog-post-img-large {
            max-width: 150%;
            margin-left: -25%;
        }
    }

    li {
        @apply mb-0.5;
    }

    code {
        @apply font-medium text-sm;
    }

    blockquote {
        letter-spacing: initial;

        code {
            @apply bg-gray-accent dark:bg-gray-accent-dark;
        }
    }

    p {
        @apply mb-4;
    }

    ul,
    ol {
        @apply mb-4;

        ul,
        ol {
            @apply mb-2;
        }
    }
    blockquote:not(.quote) {
        @apply p-6 rounded bg-gray-accent-light dark:bg-gray-accent-dark mb-4;
    }

    iframe {
        @apply rounded w-full;
    }

    thead {
        text-align: left;
    }
    td,
    th {
        @apply border-gray-accent-light dark:border-gray-accent-dark border-dashed border-b text-left pt-2;
        padding-bottom: calc(0.5rem - 1px);

        &:not(:first-child) {
            @apply pl-8;
        }
    }

    th:last-child,
    td:last-child {
        padding-right: 0;
    }

    /* expandable/collapsible sections */
    details {
        @apply p-2 cursor-pointer border-gray-accent-light dark:border-gray-accent-dark border-dashed border;

        > summary {
            @apply text-red list-none pl-4 relative before:absolute before:left-[3px] before:top-[8px] before:w-[10px] before:h-[7px];

            &:before {
                background: url("data:image/svg+xml,%3Csvg width='10' height='7' viewBox='0 0 10 7' fill='none' xmlns='http://www.w3.org/2000/svg'%0A%3E%3Cpath d='M8.15448 0.316976L5.00049 3.47201L1.8465 0.316976C1.42387 -0.105659 0.73923 -0.105659 0.316596 0.316976C-0.105532 0.739104 -0.105532 1.42425 0.316596 1.84636L4.23586 5.76563C4.65799 6.18726 5.34211 6.18726 5.76421 5.76563L9.68296 1.84688V1.84637C10.1056 1.42425 10.1056 0.740128 9.68347 0.317507C9.26134 -0.105115 8.57722 -0.105128 8.1546 0.317L8.15448 0.316976Z' fill='%23EF7632' /%3E%3C/svg%3E");
                transform: rotate(-90deg);
                transition: all 0.25s ease-out;
            }

            & + p {
                margin-top: 0.25rem;
            }
        }

        &[open] {
            > summary:before {
                transform: rotate(0deg);
                transition: all 0.25s ease-out;
            }
        }

        > div {
            @apply ml-4 mt-2 rounded;
        }
    }

    details + details {
        @apply border-t-0;
    }
}

@media screen and (max-width: 800px) {
    .article-content {
        img.blog-post-img-large {
            max-width: 100%;
            margin-left: 0;
        }
    }
}

/* animated underlined links */
.article-content a:not(.cta),
footer a:not(.cta) {
    background: linear-gradient(to right, rgba(191, 191, 188, 0), rgba(191, 191, 188, 0)),
        linear-gradient(to right, rgba(191, 191, 188, 1), rgba(191, 191, 188, 1));
    background-size: 100% 0.1em, 0 0.1em;
    background-position: 100% 100%, 0 100%;
    background-repeat: no-repeat;
    padding-bottom: 0.2rem;
    transition: background-size 400ms !important; /* unfortunately necessary until antd is removed */

    &:hover,
    &:focus {
        background-size: 0 0.1em, 100% 0.1em;
    }
}

.share-links a {
    background: none;
    transition: none;
}

/* timeline key */

.timeline-entry li[data-type='feature']:before {
    background: #43af79;
}
.timeline-entry li[data-type='news']:before {
    background: #0080ff;
}
.timeline-entry li[data-type='milestone']:before {
    background: #c849f4;
}

/* Product page */

.product-hero-image {
    &:after {
        @apply absolute bottom-0 left-0 w-full h-48 bg-gradient-to-t from-tan z-20;
        content: '';
    }
}

div[class^='feature-'].text-center {
    @apply border-gray border-dashed border-1 md:mb-0 relative overflow-hidden;
}

.feature-event-autocapture {
    /* @apply border-r border-gray border-dashed; */
    background: url('../images/dash-vertical.svg') 100% / 1px repeat-y;
}
/* ... */

